--- a/frontend/src/styles/main.scss
+++ b/frontend/src/styles/main.scss
@@ -1,7 +1,7 @@
 @charset "utf-8";
 /*! Force output above line by adding unicode charset: 🐈 */
 
-@import "./reset.scss";
+@import "./_reset.scss";
 
 #root {
   margin-inline: auto;
