--- a/frontend/src/styles/main.scss
+++ b/frontend/src/styles/main.scss
@@ -25,6 +25,12 @@ form {
   margin-block-end: 24px;
 }
 
+legend {
+  margin-block-end: 16px;
+  padding-inline-start: 8px;
+  border-inline-start: 1px solid;
+}
+
 h1 {
   margin-block-end: 16px;
   font-size: 32px;
