--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -56,6 +56,10 @@ strong {
   font-weight: bold;
 }
 
+small {
+  font-size: 14px;
+}
+
 ul {
   list-style-type: disc;
   padding-inline-start: 16px;
